# dotenv

./: CMakeLists.txt  README.md  dotenv.vix  vix.json
examples/: get_or.cpp  load_apply.cpp  load_print.cpp
include/dotenv/: dotenv.hpp
tests/: test_basic.cpp
